overlays/staging/backend-image-override.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-dep
spec:
  template:
    spec:
      containers:
      - name: todo-backend
        image: gcr.io/dwk-gke-458706/todo-backend:staging-578afa5
