overlays/staging/backend-image-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-dep
spec:
  template:
    spec:
      containers:
      - name: todo-backend
        image: kylmps/todo-backend:4.3
