overlays/staging/broadcaster-image-override.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broadcaster-dep
spec:
  template:
    spec:
      containers:
      - name: broadcaster
        image: gcr.io/dwk-gke-458706/broadcaster:staging-b287111 # Overriding image for staging
