overlays/staging/frontend-image-override.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-dep
spec:
  template:
    spec:
      containers:
      - name: todo
        image: gcr.io/dwk-gke-458706/todo-frontend:staging-e196e2c
