overlays/staging/frontend-image-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-dep
spec:
  template:
    spec:
      containers:
      - name: todo
        image: kylmps/todo-frontend:5.9
