overlays/staging/route-patch.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: todo-route
spec:
  hostnames:
  - "staging.34.36.101.217.nip.io"
